<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AlertDownloadBadHTTPS">Download is not possible when you used a bad value of scheme to connect (http vs https)</string>
    <string name="AlertHTTP">You try to access a not secured web site (http: instead of https:). For security reason, Android may restrict some features into this app for such web sites. You should secure your website by adding a HTTPS certificate.</string>
    <string name="AlertHTTPS">It seems your server forced a redirect to a HTTPS page. Please check your Dolibarr URL and use the https URL form directly (URL starting with https:// instead of http://). Keeping using an URL without the s will result, for security purposes, in features not working like cache optimization or downloading files.</string>
    <string name="Author">Author</string>
    <string name="BasicAuthLogin">Basic auth login</string>
    <string name="BasicAuthPassword">Basic auth password</string>
    <string name="CacheAndHistoryCleared">Cache and history cleared.</string>
    <string name="Compatibility">Compatibility</string>
    <string name="DeletePredefinedUrl">Delete the predefined URL of this instance</string>
    <string name="DeviceAPILevel">Device API Level</string>
    <string name="DeviceHasDownloadManager">Device has a download manager</string>
    <string name="DeviceHasMenuHardware">Device has hardware buttons</string>
    <string name="DeviceHasODXViewer">Device has OpenOffice viewers</string>
    <string name="DeviceHasPDFViewer">Device has PDF viewers</string>
    <string name="DeviceSize">Device screen size</string>
    <string name="DownloadDirectory">Download directory</string>
    <string name="License">License</string>
    <string name="No">No</string>
    <string name="NoPreviousPageAgainToQuit">No previous page. Use back again to quit.</string>
    <string name="PhotosDirectory">Photos directory</string>
    <string name="SavedLogin">Saved login</string>
    <string name="SavedPassword">Saved password</string>
    <string name="SelectUrl">or select a predefined URL</string>
    <string name="Sources">Sources</string>
    <string name="UrlCopied">URL copied into clipboard</string>
    <string name="UserAgent">User Agent</string>
    <string name="Version">Version</string>
    <string name="VersionStaticResources">Version of local static resources</string>
    <string name="Warning">Warning</string>
    <string name="Web">Web</string>
    <string name="Yes">Yes</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="app_name">DoliDroid</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="currentUrl">Current Url</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="dolibarr_for_android">Android client for Dolibarr</string>
    <string name="dolibarr_url">Dolibarr URL</string>
    <string name="dolicloud_register"><a href="https://myaccount.dolicloud.com/register.php?origin=dolidroid&amp" utm_source="dolidroid&amp" utm_campaign="none&amp" utm_medium="mobile">"I don't have a Dolibarr ERP CRM instance yet, create one on DoliCloud.com..."</a></string>
    <string name="dolidroidLabel">DoliDroid, Android front-end for Dolibarr ERP-CRM</string>
    <string name="dolidroidUserAgent">DoliDroid - Android front-end for Dolibarr ERP-CRM</string>
    <string name="downloadComplete">Download of file complete</string>
    <string name="enterNewUrl">or enter a new URL</string>
    <string name="failedtogetpage">Failed to get page by a fast direct download. Are you logged ?</string>
    <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
    <string name="fingerprint_error_hw_not_available">Fingerprint hardware not available.</string>
    <string name="fingerprint_error_hw_not_present">This device does not have a fingerprint sensor</string>
    <string name="fingerprint_error_lockout">Too many attempts. Please try again later.</string>
    <string name="fingerprint_error_no_fingerprints">No fingerprints enrolled.</string>
    <string name="fingerprint_error_user_canceled">Fingerprint operation canceled by user.</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="generic_error_no_device_credential">No PIN, pattern, or password set.</string>
    <string name="generic_error_no_keyguard">This device does not support PIN, pattern, or password.</string>
    <string name="generic_error_user_canceled">Authentication canceled by user.</string>
    <string name="logo_dolidroid">Logo DoliDroid</string>
    <string name="menu_add_url">Add predefined URL</string>
    <string name="menu_autofill_off">Save login/password (no)</string>
    <string name="menu_autofill_on">Save login/password</string>
    <string name="menu_back">Back</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_clear_all_urls">Clear predefined URLs</string>
    <string name="menu_clearcache">Clear cache</string>
    <string name="menu_copy_url">Copy URL into clipboard</string>
    <string name="menu_go_to">Quick access</string>
    <string name="menu_info">About DoliDroid</string>
    <string name="menu_info_short">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_multicompany">Switch company</string>
    <string name="menu_photo">Scan a document</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_refresh">Reload page</string>
    <string name="menu_remove_url">Remove a predefined URL</string>
    <string name="menu_scan">Scan a barcode</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_show_bar_off">Show menu bar (no)</string>
    <string name="menu_show_bar_on">Show menu bar</string>
    <string name="menu_uselocalresources_off">Use local static resources (no)</string>
    <string name="menu_uselocalresources_on">Use local static resources</string>
    <string name="menu_utilities">Utilities</string>
    <string name="notCompatibleWithVersion">Dolibarr version on server (%1$s) is too old. DoliDroid need Dolibar version %2$s or higher.</string>
    <string name="notification_error_ssl_cert_invalid">Server security SSL Certificate seems invalid:</string>
    <string name="notification_error_ssl_cert_invalidbis">Do you want to continue (download of files would not be possible) ?</string>
    <string name="open">Start</string>
    <string name="savedDolUrlRoot">Dolibarr instance Url</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="textAboutA">Versions...</string>
    <string name="textAboutB">Instance Url...</string>
    <string name="textAboutB2">Saved Logins...</string>
    <string name="textAboutC">CurrentURL and user agent...</string>
    <string name="textBack">Back</string>
    <string name="textMenu">Menu</string>
    <string name="title_activity_about" />
    <string name="title_activity_main">DoliDroid</string>
    <string name="title_activity_second" />
</resources>
