<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@mipmap/ic_action_menu" android:id="@id/menu_menu" android:orderInCategory="10" android:title="@string/menu_menu" android:showAsAction="always" />
    <item android:icon="@mipmap/ic_action_search" android:id="@id/menu_search" android:orderInCategory="20" android:title="@string/menu_go_to" android:showAsAction="always" />
    <item android:icon="@drawable/ic_baseline_star_border_24" android:id="@id/menu_bookmarks" android:orderInCategory="22" android:title="@string/menu_bookmarks" android:showAsAction="always" />
    <item android:icon="@mipmap/ic_action_back" android:id="@id/menu_back" android:orderInCategory="30" android:title="@string/menu_back" android:showAsAction="always" />
    <item android:icon="@drawable/ic_baseline_star_border_24" android:id="@id/menu_scan" android:orderInCategory="32" android:title="@string/menu_scan" />
    <item android:icon="@drawable/ic_baseline_star_border_24" android:id="@id/menu_photo" android:orderInCategory="33" android:title="@string/menu_photo" />
    <item android:icon="@mipmap/ic_action_multicompany" android:id="@id/menu_multicompany" android:orderInCategory="34" android:title="@string/menu_multicompany" />
    <item android:id="@id/menu_utilities" android:menuCategory="secondary" android:orderInCategory="290" android:title="@string/menu_utilities">
        <menu android:id="@id/submenu_utilities">
            <item android:icon="@android:drawable/alert_dark_frame" android:id="@id/menu_copy_url" android:menuCategory="secondary" android:orderInCategory="130" android:title="@string/menu_copy_url" />
            <item android:icon="@android:drawable/ic_menu_rotate" android:id="@id/refresh" android:menuCategory="secondary" android:orderInCategory="140" android:title="@string/menu_refresh" />
            <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@id/clearcache" android:menuCategory="secondary" android:orderInCategory="150" android:title="@string/menu_clearcache" />
        </menu>
    </item>
    <item android:id="@id/menu_settings" android:menuCategory="secondary" android:orderInCategory="300" android:title="@string/menu_settings">
        <menu android:id="@id/submenu_second">
            <item android:id="@id/always_show_bar" android:visible="false" android:menuCategory="secondary" android:orderInCategory="130" android:title="@string/menu_show_bar_on" android:checkable="true" />
            <item android:id="@id/always_autofill" android:menuCategory="secondary" android:orderInCategory="135" android:title="@string/menu_autofill_on" android:checkable="true" />
            <item android:id="@id/always_uselocalresources" android:menuCategory="secondary" android:orderInCategory="137" android:title="@string/menu_uselocalresources_on" android:checkable="true" />
            <item android:id="@id/clear_all_urls" android:menuCategory="secondary" android:orderInCategory="138" android:title="@string/menu_clear_all_urls" />
            <item android:id="@id/about" android:menuCategory="secondary" android:orderInCategory="500" android:title="@string/menu_info" android:titleCondensed="@string/menu_info_short" android:showAsAction="withText" />
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_lock_power_off" android:id="@id/menu_logout" android:menuCategory="secondary" android:orderInCategory="500" android:title="@string/menu_logout" android:showAsAction="withText" />
</menu>