<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:theme="@style/DoliDroidThemeFirst" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:theme="@style/DoliDroidThemeFirst" android:textColor="@color/black" android:background="@color/white" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@color/grey" android:id="@id/textAndroidClient" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/dolibarr_for_android" android:layout_centerHorizontal="true" />
        <TextView android:textSize="14.0sp" android:id="@id/TextAbout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/textAboutA" android:maxLines="30" android:layout_below="@id/imageView01" android:layout_marginStart="14.0dip" android:layout_marginEnd="14.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
        <TextView android:textSize="14.0sp" android:id="@id/TextAbout02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/textAboutB" android:maxLines="50" android:layout_below="@id/imageView02" android:layout_marginStart="14.0dip" android:layout_marginEnd="14.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
        <TextView android:textSize="14.0sp" android:id="@id/TextAbout02b" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/textAboutB2" android:maxLines="50" android:layout_below="@id/buttonDeletePredefinedUrl" android:layout_marginStart="19.0dip" android:layout_marginEnd="17.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
        <Button android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/buttonDeletePredefinedUrl" android:background="#ff009688" android:paddingTop="0.0dip" android:paddingBottom="4.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="4.0dip" android:text="@string/DeletePredefinedUrl" android:layout_below="@id/TextAbout02" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:layout_marginStart="14.0dip" android:layout_marginEnd="14.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
        <TextView android:textSize="14.0sp" android:id="@id/TextAbout03" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/textAboutC" android:maxLines="50" android:layout_below="@id/imageView03" android:layout_marginStart="14.0dip" android:layout_marginEnd="14.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
        <ImageView android:id="@id/imageView01" android:layout_width="48.0dip" android:layout_height="42.0dip" android:layout_marginTop="40.0dip" android:src="@drawable/ic_baseline_help_outline_24" android:layout_below="@id/textAndroidClient" android:layout_centerHorizontal="true" android:layout_alignParentStart="false" android:backgroundTint="@color/yellow" android:backgroundTintMode="screen" />
        <ImageView android:id="@id/imageView02" android:layout_width="48.0dip" android:layout_height="45.0dip" android:layout_marginTop="55.0dip" android:src="@drawable/ic_baseline_storage_24" android:layout_below="@id/TextAbout01" android:layout_centerHorizontal="true" android:layout_alignParentStart="false" android:foregroundTint="#ff009688" />
        <ImageView android:id="@id/imageView03" android:layout_width="48.0dip" android:layout_height="45.0dip" android:layout_marginTop="55.0dip" android:src="@drawable/ic_baseline_screenshot_monitor_24" android:layout_below="@id/TextAbout02b" android:layout_centerHorizontal="true" android:layout_alignParentStart="false" android:foregroundTint="#ff009688" />
    </RelativeLayout>
</ScrollView>