<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:theme="@style/DoliDroidThemeFirst" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <WebView android:textColor="@color/black" android:id="@id/webViewContent" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <TextView android:textSize="12.0sp" android:textColor="@color/grey" android:id="@id/textAndroidClient" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/dolibarr_for_android" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="12.0sp" android:textColor="@color/black" android:textColorLink="@color/blue" android:id="@id/textViewLink" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="56.0dip" android:text="@string/dolicloud_register" android:layout_alignTop="@id/buttonStart" android:layout_centerHorizontal="true" android:textAlignment="gravity" />
    <Spinner android:id="@id/combo_list_of_urls" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/url_of_instance" android:spinnerMode="dialog" style="@android:style/Widget.Material.Spinner.Underlined" />
    <Button android:textColor="#ffffffff" android:id="@id/buttonStart" android:background="#ff009688" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="48.0dip" android:minWidth="120.0dip" android:text="@string/open" android:layout_below="@id/url_of_instance" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="16.0sp" android:textColor="@color/yellow" android:id="@id/textDolibarrURL" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/dolibarr_url" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <EditText android:textSize="15.0sp" android:id="@id/url_of_instance" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="10.0dip" android:minHeight="48.0dip" android:hint="https://..." android:ems="10" android:singleLine="true" android:layout_below="@id/textDolibarrURL" android:layout_centerHorizontal="true" android:inputType="textUri" android:importantForAutofill="no" style="@android:style/Widget.Holo.AutoCompleteTextView">
        <requestFocus />
    </EditText>
</RelativeLayout>